Fixing bugs in Common based on Findbugs plugin #65